package com.livefront.codechallenge.utils

object TestTags {
    const val CHARACTER_LIST = "LAZY_LIST"
    const val CHARACTER_CARD = "CHARACTER_CARD"
}