...
@Composable
private fun CardPreview() {
    LivefrontCodeChallengeTheme {
        CharacterCard(
            character = Character(
                id = 1,
                name = "Superman",
                work = Work(occupation = "", base = ""),
                connections = Connections(groupAffiliation = "", relatives = ""),
                images = Images(extraSmall = "", small = "", medium = "", large = "")
            )
        ) {}
    }
...
